[tool.poetry]
name = "ohtuvarasto"
version = "0.1.0"
description = ""
authors = ["Hogwarter <islalondon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
pytest = "^8.3.3"
jsonpickle = "^3.4.2"
cowsay = "^6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
